--- a/style.css
+++ b/style.css
@@ -205,6 +205,16 @@ body {
   width: 574px;
   height: 121px;
   float: left;
+  margin-bottom: 24px;
+  position: relative;
+}
+
+.comment-box:nth-child(even) {
+  margin-right: 32px;
+}
+
+.comment-box:nth-last-child(-n+2) {
+  margin-bottom: 0px;
 }
 
 .comment-box>img {
@@ -214,9 +224,43 @@ body {
   background-color: #445161;
   float: left;
   border-radius: 50%;
+  margin-right: 23px;
+}
+
+.comment-box>img::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 20px;
+  left: 88px;
+  background-color: #ebebeb;
+  transform: rotate(45deg);
+  top: 32px;
 }
 
 .reviews-text {
-  float: none;
+  padding: 16px 20px 16px 16px;
+  width: 436px;
+  height: 89px;
+  background-color: #ebebeb;
+  float: left;
   display: inline;
+  border-radius: 5px;
+}
+
+.reviews-text p {
+  color: #333333;
+  font-style: italic;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  margin-bottom: 9px;
+}
+
+.reviews-text span {
+  color: #989898;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
 }
