--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 }
 
 /*style for scrinshots section*/
-.scrinshots>h1 {
+.scrin-h {
   text-align: center;
   font-size: 30px;
   font-weight: 400;
@@ -170,7 +170,7 @@ body {
   margin-bottom: 0px;
 }
 
-.scrinshots h2 {
+.scrinshots>article h2 {
   font-size: 24px;
   font-weight: 400;
   line-height: 30px;
